Chapter6/5.3-Istio-Log-Output/manifests/pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: default
  labels:
    app: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: pingpong:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: default
  labels:
    app: pingpong
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
