Chapter6/5.3-Istio-Log-Output/manifests/httproute-log.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: default
spec:
  parentRefs:
    - name: log-gateway-istio
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80
